# matmul.c

./: CMakeLists.txt
src/: CMakeLists.txt  matmul.cc  matmul.h  parallel.cc  parallel.hh
